K8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: shebl.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 3000
